@@ -15,6 +15,7 @@ application {
             '--add-opens=javafx.graphics/com.sun.javafx.css=ALL-UNNAMED',
             '--add-opens=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED',
             '--add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED',
+            '--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED',
             '--add-exports=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED'
     ]
 }
